--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "argon2": "^0.43.0",
+    "dotenv": "^16.5.0",
+    "express-rate-limit": "^7.5.0",
+    "mysql2": "^3.14.1"
   }
 }
