--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "argon2": "^0.43.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express-rate-limit": "^7.5.0",
     "mysql2": "^3.14.1"
